force-app/main/default/objects/Contact/fields/Otro_cargo__c.field-meta.xml
<CustomField>
    <fullName>Otro_cargo__c</fullName>
    <label>Si es otro cargo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>