force-app/main/default/objects/Contact/fields/Permiso_de_contacto_del__c.field-meta.xml
<CustomField>
    <fullName>Permiso_de_contacto_del__c</fullName>
    <label>Permiso de contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Permiso_de_Contacto</valueSetName>
    </valueSet>
</CustomField>