force-app/main/default/objects/Contact/fields/Segundo_Nombre_Hijo_3__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Nombre_Hijo_3__c</fullName>
    <label>Segundo Nombre...</label>
    <length>40</length>
    <type>Text</type>
</CustomField>