force-app/main/default/objects/Contact/fields/Tiene_hijos__c.field-meta.xml
<CustomField>
    <fullName>Tiene_hijos__c</fullName>
    <inlineHelpText>Recuerda registrar la información del parentesco en sección relación familiar</inlineHelpText>
    <label>¿Tiene hijos?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>