force-app/main/default/objects/Contact/recordTypes/Motos_Contacto.recordType-meta.xml
<RecordType>
    <fullName>Motos_Contacto</fullName>
    <active>true</active>
    <description>Record Type Motos Contacto</description>
    <label>Contacto</label>
</RecordType>