force-app/main/default/objects/Contact/validationRules/AM_RV_CON_001.validationRule-meta.xml
<ValidationRule>
    <fullName>AM_RV_CON_001</fullName>
    <active>true</active>
    <description>Solo puede registrar 7 o 10 números como Teléfono</description>
    <errorConditionFormula>AND
(
	NOT(ISBLANK(Phone)),
	NOT(REGEX(Phone, &quot;[0-9]{7}&quot;)),
	NOT(REGEX(Phone , &quot;[0-9]{10}&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>AM_RV_CON_001: Solo puede registrar 7 o 10 números como Teléfono</errorMessage>
</ValidationRule>