force-app/main/default/objects/Contact/validationRules/AM_RV_CON_002.validationRule-meta.xml
<ValidationRule>
    <fullName>AM_RV_CON_002</fullName>
    <active>true</active>
    <description>Solo puede registrar 7 o 10 números como Otro teléfono</description>
    <errorConditionFormula>AND
(
	NOT(ISBLANK(OtherPhone)),
	NOT(REGEX(OtherPhone, &quot;[0-9]{7}&quot;)),
	NOT(REGEX(OtherPhone, &quot;[0-9]{10}&quot;))
)</errorConditionFormula>
    <errorDisplayField>OtherPhone</errorDisplayField>
    <errorMessage>AM_RV_CON_002: Solo puede registrar 7 o 10 números como Otro teléfono</errorMessage>
</ValidationRule>