force-app/main/default/objects/Contact/validationRules/Valida_Contacto_Autos.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Contacto_Autos</fullName>
    <active>true</active>
    <errorConditionFormula>AND( CONTAINS(CreatedBy.Profile.Name , &quot;Autos&quot;), CreatedById &lt;&gt; $User.Id, CONTAINS($Profile.Name, &quot;Motos&quot;)=FALSE, NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>No cuenta con permisos de edición sobre este contacto, contactese con el administrador.</errorMessage>
</ValidationRule>