force-app/main/default/objects/Contact/validationRules/Valida_TipoDocu_NumDocu.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_TipoDocu_NumDocu</fullName>
    <active>true</active>
    <description>Verifica si se escoge algo en uno de los 2 campos ambos deben estar llenos</description>
    <errorConditionFormula>OR(
AND( TEXT( AM_Tipo_de_documento_Contacto__c )&lt;&gt;null,  AM_Numero_de_documento_contacto__c  == null ),
AND( TEXT( AM_Tipo_de_documento_Contacto__c )==null,  AM_Numero_de_documento_contacto__c  &lt;&gt; null ))</errorConditionFormula>
    <errorMessage>Favor verifique los campos Tipo de documento y Número de documento.</errorMessage>
</ValidationRule>